@@ -40,6 +40,7 @@
             "Perl::Critic::Policy::Moose::RequireMakeImmutable" : "1.05",
             "Perl::Critic::Utils" : "0",
             "Pod::Wordlist" : "0",
+            "Test::CPAN::Changes" : "0",
             "Test::CPAN::Meta" : "0.12",
             "Test::CPAN::Meta::JSON" : "0",
             "Test::CleanNamespaces" : "0",
@@ -237,6 +238,7 @@
          "Perl::Critic::Policy::Moose::RequireMakeImmutable" : "1.05",
          "Perl::Critic::Utils" : "1.130",
          "Pod::Wordlist" : "1.20",
+         "Test::CPAN::Changes" : "0.400002",
          "Test::CPAN::Meta" : "0.25",
          "Test::CPAN::Meta::JSON" : "0.16",
          "Test::CleanNamespaces" : "0.22",
@@ -380,12 +382,12 @@
          {
             "class" : "Dist::Zilla::Plugin::Author::SKIRMESS::RepositoryBase",
             "name" : "@Author::SKIRMESS/Author::SKIRMESS::RepositoryBase",
-            "version" : "0.013"
+            "version" : "0.014"
          },
          {
             "class" : "Dist::Zilla::Plugin::Author::SKIRMESS::InsertVersion",
             "name" : "@Author::SKIRMESS/Author::SKIRMESS::InsertVersion",
-            "version" : "0.013"
+            "version" : "0.014"
          },
          {
             "class" : "Dist::Zilla::Plugin::NextRelease",
@@ -420,6 +422,7 @@
                      "xt/author/pod-syntax.t",
                      "xt/author/portability.t",
                      "xt/author/test-version.t",
+                     "xt/release/changes.t",
                      "xt/release/eol.t",
                      "xt/release/kwalitee.t",
                      "xt/release/manifest.t",
@@ -752,6 +755,7 @@
                      "xt/author/pod-syntax.t",
                      "xt/author/portability.t",
                      "xt/author/test-version.t",
+                     "xt/release/changes.t",
                      "xt/release/eol.t",
                      "xt/release/kwalitee.t",
                      "xt/release/manifest.t",
