@@ -178,6 +178,7 @@ x_BuiltWith:
     Perl::Critic::Policy::Moose::RequireMakeImmutable: '1.05'
     Perl::Critic::Utils: '1.130'
     Pod::Wordlist: '1.20'
+    Test::CPAN::Changes: '0.400002'
     Test::CPAN::Meta: '0.25'
     Test::CPAN::Meta::JSON: '0.16'
     Test::CleanNamespaces: '0.22'
@@ -295,11 +296,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Author::SKIRMESS::RepositoryBase
       name: '@Author::SKIRMESS/Author::SKIRMESS::RepositoryBase'
-      version: '0.013'
+      version: '0.014'
     -
       class: Dist::Zilla::Plugin::Author::SKIRMESS::InsertVersion
       name: '@Author::SKIRMESS/Author::SKIRMESS::InsertVersion'
-      version: '0.013'
+      version: '0.014'
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: '@Author::SKIRMESS/NextRelease'
@@ -331,6 +332,7 @@ x_Dist_Zilla:
             - xt/author/pod-syntax.t
             - xt/author/portability.t
             - xt/author/test-version.t
+            - xt/release/changes.t
             - xt/release/eol.t
             - xt/release/kwalitee.t
             - xt/release/manifest.t
@@ -589,6 +591,7 @@ x_Dist_Zilla:
             - xt/author/pod-syntax.t
             - xt/author/portability.t
             - xt/author/test-version.t
+            - xt/release/changes.t
             - xt/release/eol.t
             - xt/release/kwalitee.t
             - xt/release/manifest.t
