@@ -2,6 +2,9 @@ Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS
 
 {{$NEXT}}
 
+  - Added Test::CPAN::Changes release test
+  - Release tests are no longer run on TravisCI
+
 0.014  2017-09-14 22:02:18 UTC
 
   - Removed Test::CPAN::Changes release test because it fails before the
